# todays-menu-backend

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/routes/: menu.rs  mod.rs  order.rs  review.rs  user.rs
templates/: credit_card.html  fword_list.txt  history.html  mainpage.html  mainpage_bak.html  menu.html  menu2.html  menu_new.html  my_order.html  recommend.html  review.html  reviewpage.html  sign_favorite.html  sign_favorite_bak.html  signup.html
templates/css/: burger.css  credit_card.css  history.css  main2.css  menu_new.css  my_order.css  recommend.css  review.css  reviewpage.css  sign_favorite2.css  styles.css
templates/images/: photothumb.db
templates/js/: burger.js  main2.js  menu_new.js  my_order.js  review.js  reviewpage.js  sign_favorite2.js
